# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "merge_alternatively", path = "exercises/array_string/merge_alternatively.rs" },
  { name = "gcd_of_strings", path = "exercises/array_string/gcd_of_strings.rs" },
  { name = "kids_with_candies", path = "exercises/array_string/kids_with_candies.rs" },
  { name = "can_place_flowers", path = "exercises/array_string/can_place_flowers.rs" },
  { name = "reverse_vowels", path = "exercises/array_string/reverse_vowels.rs" },
  { name = "reverse_words", path = "exercises/array_string/reverse_words.rs" },
  { name = "product_except_self", path = "exercises/array_string/product_except_self.rs" },
  { name = "increasing_triplet", path = "exercises/array_string/increasing_triplet.rs" },
  { name = "compress", path = "exercises/array_string/compress.rs" },
  { name = "move_zeros", path = "exercises/two_pointers/move_zeros.rs" },
  { name = "is_subsequence", path = "exercises/two_pointers/is_subsequence.rs" },
  { name = "max_area", path = "exercises/two_pointers/max_area.rs" },
  { name = "max_operations", path = "exercises/two_pointers/max_operations.rs" },
  { name = "find_max_average", path = "exercises/sliding_window/find_max_average.rs" },
  { name = "max_vowels", path = "exercises/sliding_window/max_vowels.rs" },
  { name = "longest_ones", path = "exercises/sliding_window/longest_ones.rs" },
  { name = "longest_subarray", path = "exercises/sliding_window/longest_subarray.rs" },
  { name = "largest_altitude", path = "exercises/prefix_sum/largest_altitude.rs" },
  { name = "pivot_index", path = "exercises/prefix_sum/pivot_index.rs" },
  { name = "find_difference", path = "exercises/hashmap_set/find_difference.rs" },
  { name = "unique_occurrences", path = "exercises/hashmap_set/unique_occurrences.rs" },
  { name = "close_strings", path = "exercises/hashmap_set/close_strings.rs" },
  { name = "equal_pairs", path = "exercises/hashmap_set/equal_pairs.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
